# debrokly

./: .gitignore  CLAUDE.md  GITIGNORE_INFO.md  LICENSE  PROJECT_STATUS.md  README.md  REQUIREMENTS.md  create-github-issues.sh  detailed_pdf_analysis.py  pyproject.toml  requirements.txt  test_pdf_libraries.py
docs/: GITHUB_WORKFLOW.md
docs/issues/: README.md  bugs.md  enhancements.md  security.md
samples/: .gitkeep  README.md
src/debrokly/: __init__.py  cli.py
src/debrokly/core/: __init__.py  exporter.py  extractor.py  pdf_parser.py
src/debrokly/utils/: __init__.py  helpers.py
tests/: __init__.py
