[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debrokly"
version = "0.1.0"
description = "Credit card statement PDF analyzer and transaction data extractor"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Jaydeep Chauhan", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pdfplumber>=0.9.0",
    "pandas>=1.5.0",
    "openpyxl>=3.1.0",
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "pdf2image>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "pdf2image>=1.16.0",
]

[project.scripts]
debrokly = "debrokly.cli:main"

[project.urls]
Homepage = "https://github.com/jaydeep-chauhan/debrokly"
Repository = "https://github.com/jaydeep-chauhan/debrokly"
Issues = "https://github.com/jaydeep-chauhan/debrokly/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/debrokly --cov-report=term-missing"